# aioipfs

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTORS.rst  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: python-package.yml
aioipfs/: __init__.py  api.py  exceptions.py  gitignore_parser.py  helpers.py  multi.py  util.py
aioipfs/apis/: __init__.py  dag.py  multibase.py  p2p.py  pin.py  pubsub.py  swarm.py
aioipfs/scripts/bohort/: __init__.py  cli.py  default_config.yaml
docs/: Makefile  api.rst  bohort.rst  conf.py  index.rst
examples/: pubsub_service.py
test/: test_client.py
tests/: conftest.py  test_client.py  test_helpers.py
tests/datafiles/: ipns-key1
